Fix the hero section flex items div overflow

--- a/style/index.css
+++ b/style/index.css
@@ -120,6 +120,8 @@ header {
    display: flex;
    flex-direction: column;
    height: 955px;
+   /* fixed the issue of div overflow(no content) on flex items */
+   width: 0%;
 }
 
 #plates {
